Fix alignment

--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -58,7 +58,7 @@
 .footer-widgets-block {
 
 	&#footer-widget-1 {
-		margin: spacing(4) 0;
+		margin: spacing(4) auto;
 		padding: spacing(2);
 		max-width: $size__width--main + spacing(2) * 2;
 	}
